# schema-infra

./: .gitignore  .gitmodules  README.md  build.sh  deploy.sh
.github/workflows/: README.md  auto-deploy-dev-on-fold.yml  auto-deploy-on-fold.yml  auto-fix.yml  auto-merge.yml  bump-schema-service.yml  ci-tests.yml  ci.yml  deploy.yml  discord-notify.yml
.last-stack/: pr-venue
.lastgit/: README.md  SOCKET  canary-ticker.sh  ci.sh  deploy-pipeline.sh  deploy-run.sh  install-canary-ticker-launchd.sh  install-deploy-launchd.sh  install-mirror-launchd.sh  sync-github-mirror.sh
cdk/: cdk.json  outputs.json  package-lock.json  package.json  tsconfig.json
cdk/lib/: environment.ts  schema-infra-oidc-stack.ts  schema-stack.ts
docs/: signal-sources.md  staged-canary-deploy.md
frontend/: README.md  index.html  script.js  styles.css
lambdas/schema_service/: Cargo.toml  README.md  build.sh
lambdas/schema_service/src/: main.rs  s3_persistence.rs
proofs/: schema-pow-dev-live-proof.md
scripts/: lambda-container-build.sh
scripts/deploy/: bounded-command.py  canary-lib.sh  dependency-budget.sh  prove-mutation-gate.sh  smoke-dev.sh  telemetry.sh  test-canary-alarm-gate.sh  test-canary-weight-pin.sh  test-prove-mutation-gate.sh  test-telemetry.sh
scripts/proof/schema-lambda-fast-deployment/: README.md  prove.py  prove.sh
test/e2e/: transform-async-flow.sh
tests/proof/schema-lambda-fast-deployment/: test-prove.sh
tests/proof/schema-lambda-fast-deployment/fixtures/complete/: releases.json  safety_controls.json
tests/proof/schema-lambda-fast-deployment/fixtures/digest-mismatch/: digests.json  meta.json  releases.json
tests/proof/schema-lambda-fast-deployment/fixtures/secret-bearing/: coalescing.json  dependency_budget.json  meta.json  path_classification.json  rollback.json
