[package]
name = "schema_service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "schema_service"
path = "src/main.rs"

[dependencies]
# FoldDB core library (types, schema service state).
# Note: the DynamoDB backend (aws-backend feature) was removed from
# fold_db in #494. The schema service state is now Sled-only. For
# Lambda deployment, the Sled directory must be backed by a
# persistent filesystem (EFS recommended). The Lambda's own AWS
# dependencies (aws-config, aws-sdk-secretsmanager) are listed
# below and are unrelated to fold_db's storage layer.
fold_db = { path = "../../../fold_db" }

# AWS Lambda runtime
lambda_http = "0.13"
lambda_runtime = "0.13"
tokio = { version = "1", features = ["full"] }

# AWS SDK (Secrets Manager for API key resolution)
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1"

# Serialization
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenSSL vendored for cross-compilation
openssl = { version = "*", features = ["vendored"] }

[profile.dev-release]
inherits = "release"
opt-level = 3
lto = "off"
codegen-units = 16
debug = false
panic = "abort"
